@@ -8,6 +8,4 @@ using namespace miosix;
 int main()
 {
     //iprintf("Hello world, write your application here\n");
-    
-    //RAM is @ 0x60000000, test it!
 }
