@@ -50,6 +50,10 @@
                     <name>stm32f207ig_stm3220g-eval</name>
                     <type>0</type>
                 </confElem>
+                <confElem>
+                    <name>stm32f207zg_ethboard_v2</name>
+                    <type>0</type>
+                </confElem>
             </confList>
         </data>
     </configuration>
